[package]
name = "database-tester"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = {version = "4.8.0"}
anyhow = {version = "1.0.90"}
arrow-array = {version = "54.2.0"}
async-trait = {version = "0.1.83"}
bson = {version = "2.13.0", features = ["chrono", "chrono-0_4"]}
chrono = {version = "0.4.39", features = ["serde"]}
clap = {version = "4.5.31"}
csv = {version = "1.3.1"}
dotenvy = {version = "0.15.7"}
env_logger = {version = "0.11.5"}
futures = {version = "0.3.31"}
futures-util = {version = "0.3.31"}
iter-chunks = {version = "0.2.2"}
itertools = {version = "0.14.0" }
log = {version = "0.4.22"}
mongodb = {version = "3.2.1"}
parquet = {version = "54.2.0"}
qsv-stats = {version = "0.30.0"}
rand = {version = "0.9.0"}
rand_distr = {version = "0.5.0"}
reqwest = {version = "0.12.12", features = ["json", "gzip", "stream"] }
scaphandre = {version = "1.0.0", features = ["serde_json"], default-features = false}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = {version = "0.8.3", features = ["runtime-tokio", "macros", "postgres", "derive", "uuid", "time", "json", "chrono"]}
strum = {version = "0.27"}
strum_macros = {version = "0.27.1"}
tokio = {version = "1.41.0", features = ["full"]}
tokio-stream = {version = "0.1.17"}
toml = {version = "0.8.20"}
uuid = { version = "1.11.0", features = ["v4"] }
virt = {version = "0.4.1"}

common = { path = "../common" }
